[update]:: tab undian update

--- a/src/app/pages/dte/lottery/edit/lottery-edit.component-before-audience.html
+++ b/src/app/pages/dte/lottery/edit/lottery-edit.component-before-audience.html
@@ -143,21 +143,21 @@
             </form>
           </div>
         </mat-tab>
-        <mat-tab label="Audience">
+        <mat-tab label="Audience" [disabled]="true">
           <div class="ayo-middle py-24" fxLayout="column">
             <div fxLayout="column" fxLayoutGap="24px">
-              <form [formGroup]="formAudience" autocomplete="off">
+              <!-- <form [formGroup]="formAudience" autocomplete="off"> -->
                 <div fxLayout="row">
                   <div class="p-24" fxLayout="column" fxLayoutGap="40px" fxFlex="50">
-                    <div fxLayout="column">
-                      <!-- <mat-form-field class="is-light form-primary">
+                    <!-- <div fxLayout="column">
+                      <mat-form-field class="is-light form-primary">
                         <input matInput type="text" formControlName="name" placeholder="{{'dte.audience.text4' | translate }}" />
                         <mat-error>
                           {{'dte.audience.text4' | translate }} {{'global.messages.mandatory_text' | translate}}
                         </mat-error>
-                      </mat-form-field> -->
+                      </mat-form-field>
         
-                      <!-- <mat-form-field class="is-light form-primary">
+                      <mat-form-field class="is-light form-primary">
                         <mat-select
                           formControlName="mission_publication_id"
                           placeholder="{{'dte.audience.select_publish_mission' | translate}}"
@@ -178,10 +178,10 @@
                         <mat-error *ngIf="formAudience.controls['mission_publication_id'].hasError('required') && formAudience.controls['mission_publication_id'].touched">
                           {{'dte.audience.publish_mission' | translate}} {{'global.messages.mandatory_text' | translate}}
                         </mat-error>
-                      </mat-form-field> -->
-                    </div>
+                      </mat-form-field>
+                    </div> -->
       
-                    <div fxLayout="column">
+                    <!-- <div fxLayout="column">
                       <mat-radio-group class="mb-16" formControlName="audience_filter" (change)="handleAudienceFilter($event.value)">
                         <mat-radio-button class="mr-24" *ngFor="let item of audienceFilter" [value]="item.value">
                           {{ item.name }}
@@ -219,7 +219,7 @@
                             </mat-option>
                           </mat-select>
                         </mat-form-field>
-                        <!-- <mat-form-field class="is-light form-primary" *ngIf="formAudience.get('audience_filter').value === 'recommended-panel'">
+                        <mat-form-field class="is-light form-primary" *ngIf="formAudience.get('audience_filter').value === 'recommended-panel'">
                           <mat-select placeholder="{{'dte.audience.b2b_active' | translate}}" formControlName="b2b_active">
                             <mat-option *ngFor="let item of b2bActiveList" [value]="item.value">
                               {{item.name}}
@@ -228,17 +228,17 @@
                           <mat-error>
                             {{'dte.audience.b2b_active' | translate}} {{'global.messages.mandatory_text' | translate}}
                           </mat-error>
-                        </mat-form-field> -->
-                        <!-- <mat-form-field class="is-light form-primary" *ngIf="formAudience.get('audience_filter').value === 'recommended-panel'">
+                        </mat-form-field>
+                        <mat-form-field class="is-light form-primary" *ngIf="formAudience.get('audience_filter').value === 'recommended-panel'">
                           <input matInput type="number" minlength="1" formControlName="total_required_panel" placeholder="{{'dte.audience.total_required_panel' | translate}}" />
                           <mat-error>
                             {{'dte.audience.total_required_panel' | translate}} {{'global.messages.mandatory_text' | translate}}
                           </mat-error>
-                        </mat-form-field> -->
+                        </mat-form-field>
                       </form>
-                    </div>
+                    </div> -->
       
-                    <div fxLayout="column">
+                    <!-- <div fxLayout="column">
                       <mat-radio-group class="mb-16" [formControl]="audienceFixed" (change)="handleAudienceFilter($event.value)" [disabled]="isDetail">
                         <mat-radio-button value="fixed-panel">
                           {{'dte.audience.fixed_panel' | translate}}
@@ -266,10 +266,10 @@
                           <mat-icon>arrow_downward</mat-icon> {{'global.button.import' | translate}} XLSX
                         </button>
                       </div>
-                    </div>
+                    </div> -->
                   </div>
       
-                  <div class="p-24" fxLayout="column" fxLayoutGap="24px" fxFlex>
+                  <!-- <div class="p-24" fxLayout="column" fxLayoutGap="24px" fxFlex>
                     <mat-card class="text-center cards" [ngClass]="{clickable: isDetail}" (click)="showPanelBlast()">
                       <mat-card-title class="cards__title">
                         {{ formAudience.get("panel_count").value }}
@@ -282,11 +282,11 @@
                       </mat-card-title>
                       <mat-card-subtitle style="color: white;">{{'dte.audience.estimated_success' | translate}}</mat-card-subtitle>
                     </mat-card>
-                  </div>
+                  </div> -->
                 </div>
-              </form>
+              <!-- </form> -->
       
-              <div class="p-24" fxLayout="row" fxLayoutGap="16px" *ngIf="!isDetail">
+              <!-- <div class="p-24" fxLayout="row" fxLayoutGap="16px" *ngIf="!isDetail">
                 <button
                   id="btn-check"
                   mat-raised-button
@@ -308,7 +308,7 @@
                 >
                   {{ls.locale.global.button.save}}
                 </button>
-              </div>
+              </div> -->
             </div>
           </div>
         </mat-tab>
