--- a/src/app/pages/dte/spin-the-wheel/create/spin-the-wheel-create.component.html
+++ b/src/app/pages/dte/spin-the-wheel/create/spin-the-wheel-create.component.html
@@ -1,8 +1,18 @@
-<div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
+<div
+  class="page-layout simple fullwidth"
+  fxLayout="column"
+  fusePerfectScrollbar
+>
   <!-- HEADER -->
   <page-content-header contentTitle="Buat Spin The Wheel">
-    <button id="btn-create-trade" style="width: 170px" (click)="submit()" mat-raised-button type="button">
-      <mat-icon>save</mat-icon> {{'global.button.save' | translate}}
+    <button
+      id="btn-create-trade"
+      style="width: 170px"
+      (click)="submit()"
+      mat-raised-button
+      type="button"
+    >
+      <mat-icon>save</mat-icon> {{ "global.button.save" | translate }}
     </button>
   </page-content-header>
   <!-- / HEADER -->
@@ -12,12 +22,22 @@
       <mat-tab-group>
         <mat-tab label="Spin The Wheel">
           <div class="ayo-middle py-24" fxLayout="column">
-            <form autocomplete="off" [formGroup]="formSpin" fxLayout="row" fxLayoutGap="16px">
+            <form
+              autocomplete="off"
+              [formGroup]="formSpin"
+              fxLayout="row"
+              fxLayoutGap="16px"
+            >
               <div fxFlex="50%">
                 <div fxLayout="row" class="px-24">
                   <mat-form-field fxFlex class="is-light form-primary">
-                    <input matInput type="text" placeholder="Nama Program" formControlName="name"
-                      name="name">
+                    <input
+                      matInput
+                      type="text"
+                      placeholder="Nama Program"
+                      formControlName="name"
+                      name="name"
+                    />
                     <!-- <mat-error
                       *ngIf="formSpin.controls['name'].hasError('required') && formSpin.controls['name'].touched">
                       {{'dte.coin_disbursement.text12' | translate}} {{'global.messages.mandatory_text' | translate}}
@@ -27,84 +47,166 @@
                 <div fxFlex fxLayout="row" class="px-24">
                   <mat-form-field fxFlex="100%">
                     <mat-select
-                  formControlName="trade_creator_id"
-                  placeholder="{{'dte.trade_program.text3' | translate}}"
-                  #singleSelect
-                >
-                  <ngx-mat-select-search
-                    [formControl]="filterTradeProgram"
-                    placeholderLabel="Pilih Trade Program"
-                    noEntriesFoundLabel="{{'global.messages.data_not_found' | translate}}"
-                  ></ngx-mat-select-search>
-                  <mat-option
-                    *ngFor="let item of filteredTradeProgram | async"
-                    [value]="item.id"
-                  >
-                    {{ item.name }}
-                  </mat-option>
-                </mat-select>
+                      formControlName="trade_creator_id"
+                      placeholder="{{ 'dte.trade_program.text3' | translate }}"
+                      #singleSelect
+                    >
+                      <ngx-mat-select-search
+                        [formControl]="filterTradeProgram"
+                        placeholderLabel="Pilih Trade Program"
+                        noEntriesFoundLabel="{{
+                          'global.messages.data_not_found' | translate
+                        }}"
+                      ></ngx-mat-select-search>
+                      <mat-option
+                        *ngFor="let item of filteredTradeProgram | async"
+                        [value]="item.id"
+                      >
+                        {{ item.name }}
+                      </mat-option>
+                    </mat-select>
                   </mat-form-field>
                 </div>
-                <div fxLayout="row" class="px-24" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
-
+                <div
+                  fxLayout="row"
+                  class="px-24"
+                  fxLayout.lt-md="column"
+                  fxLayoutGap="20px"
+                  fxLayoutGap.lt-md="0px"
+                >
                   <div fxLayout="row" fxFlex="100">
                     <mat-form-field fxFlex="50%" class="is-light form-primary">
-                      <input matInput formControlName="start_date" (focus)="startDate.open()" [matDatepicker]="startDate"
-                        placeholder="Tanggal Mulai" [min]="minDate">
+                      <input
+                        matInput
+                        formControlName="start_date"
+                        (focus)="startDate.open()"
+                        [matDatepicker]="startDate"
+                        placeholder="Tanggal Mulai"
+                        [min]="minDate"
+                      />
                       <mat-datepicker-toggle matSuffix [for]="startDate">
                         <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
                       </mat-datepicker-toggle>
                       <mat-datepicker #startDate></mat-datepicker>
                       <mat-error
-                        *ngIf="formSpin.controls['start_date'].hasError('required') && formSpin.controls['start_date'].touched">
-                        {{ls.locale.manajemen_barang_sku.manajemen_koin.text15}} {{'global.messages.mandatory_text' | translate}}
+                        *ngIf="
+                          formSpin.controls['start_date'].hasError(
+                            'required'
+                          ) && formSpin.controls['start_date'].touched
+                        "
+                      >
+                        {{
+                          ls.locale.manajemen_barang_sku.manajemen_koin.text15
+                        }}
+                        {{ "global.messages.mandatory_text" | translate }}
                       </mat-error>
                     </mat-form-field>
                     <div fxFlex="10"></div>
-                    <mat-form-field fxFlex="30" class="is-light form-primary" id="start_time">
-                      <input matInput formControlName="start_time"
-                        placeholder="{{'notification.popup_notifikasi.text8' | translate}}" [ngxTimepicker]="fullTime1"
-                        [format]="24" readonly>
+                    <mat-form-field
+                      fxFlex="30"
+                      class="is-light form-primary"
+                      id="start_time"
+                    >
+                      <input
+                        matInput
+                        formControlName="start_time"
+                        placeholder="{{
+                          'notification.popup_notifikasi.text8' | translate
+                        }}"
+                        [ngxTimepicker]="fullTime1"
+                        [format]="24"
+                        readonly
+                      />
                       <mat-icon matSuffix>access_time</mat-icon>
-                      <ngx-material-timepicker #fullTime1></ngx-material-timepicker>
+                      <ngx-material-timepicker
+                        #fullTime1
+                      ></ngx-material-timepicker>
                       <mat-error
-                        *ngIf="formSpin.controls['start_time'].hasError('required') && formSpin.controls['start_time'].touched">
-                        {{ls.locale.manajemen_barang_sku.manajemen_koin.text15}} {{'global.messages.mandatory_text' | translate}}
+                        *ngIf="
+                          formSpin.controls['start_time'].hasError(
+                            'required'
+                          ) && formSpin.controls['start_time'].touched
+                        "
+                      >
+                        {{
+                          ls.locale.manajemen_barang_sku.manajemen_koin.text15
+                        }}
+                        {{ "global.messages.mandatory_text" | translate }}
                       </mat-error>
                     </mat-form-field>
                   </div>
 
                   <div fxLayout="row" fxFlex="100">
                     <mat-form-field fxFlex="50%" class="is-light form-primary">
-                      <input matInput formControlName="end_date" (focus)="endDate.open()" [matDatepicker]="endDate"
-                        placeholder="Tanggal Berakhir" [min]="minDate">
+                      <input
+                        matInput
+                        formControlName="end_date"
+                        (focus)="endDate.open()"
+                        [matDatepicker]="endDate"
+                        placeholder="Tanggal Berakhir"
+                        [min]="minDate"
+                      />
                       <mat-datepicker-toggle matSuffix [for]="endDate">
                         <mat-icon matDatepickerToggleIcon>date_range</mat-icon>
                       </mat-datepicker-toggle>
                       <mat-datepicker #endDate></mat-datepicker>
                       <mat-error
-                        *ngIf="formSpin.controls['start_date'].hasError('required') && formSpin.controls['start_date'].touched">
-                        {{ls.locale.manajemen_barang_sku.manajemen_koin.text16}} {{'global.messages.mandatory_text' | translate}}
+                        *ngIf="
+                          formSpin.controls['start_date'].hasError(
+                            'required'
+                          ) && formSpin.controls['start_date'].touched
+                        "
+                      >
+                        {{
+                          ls.locale.manajemen_barang_sku.manajemen_koin.text16
+                        }}
+                        {{ "global.messages.mandatory_text" | translate }}
                       </mat-error>
                     </mat-form-field>
                     <div fxFlex="10"></div>
-                    <mat-form-field fxFlex="30" class="is-light form-primary" id="end_time">
-                      <input matInput formControlName="end_time"
-                        placeholder="{{'notification.popup_notifikasi.text10' | translate}}" [ngxTimepicker]="fullTime2"
-                        [format]="24" readonly>
+                    <mat-form-field
+                      fxFlex="30"
+                      class="is-light form-primary"
+                      id="end_time"
+                    >
+                      <input
+                        matInput
+                        formControlName="end_time"
+                        placeholder="{{
+                          'notification.popup_notifikasi.text10' | translate
+                        }}"
+                        [ngxTimepicker]="fullTime2"
+                        [format]="24"
+                        readonly
+                      />
                       <mat-icon matSuffix>access_time</mat-icon>
-                      <ngx-material-timepicker #fullTime2></ngx-material-timepicker>
+                      <ngx-material-timepicker
+                        #fullTime2
+                      ></ngx-material-timepicker>
                       <mat-error
-                        *ngIf="formSpin.controls['end_time'].hasError('required') && formSpin.controls['end_time'].touched">
-                        {{ls.locale.manajemen_barang_sku.manajemen_koin.text15}} {{'global.messages.mandatory_text' | translate}}
+                        *ngIf="
+                          formSpin.controls['end_time'].hasError('required') &&
+                          formSpin.controls['end_time'].touched
+                        "
+                      >
+                        {{
+                          ls.locale.manajemen_barang_sku.manajemen_koin.text15
+                        }}
+                        {{ "global.messages.mandatory_text" | translate }}
                       </mat-error>
                     </mat-form-field>
                   </div>
-                  
                 </div>
                 <div class="confirm pt-24 pb-24 px-24" fxLayout="row">
-                  <button id="btn-simpan" mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()">
-                    {{ls.locale.global.button.save}}
+                  <button
+                    id="btn-simpan"
+                    mat-raised-button
+                    type="button"
+                    class="confirmation-button"
+                    fxFlex="20"
+                    (click)="submit()"
+                  >
+                    {{ ls.locale.global.button.save }}
                   </button>
                 </div>
               </div>
@@ -586,31 +688,72 @@
           <div fxLayout="row" fxFlex="100">
             <div fxFlex="30">
               <div class="grey-box">
-                <p style="font-style: italic;font-weight: bold;text-align: center;">Floating Icon AYO SRC Toko Home Page</p>
+                <p
+                  style="
+                    font-style: italic;
+                    font-weight: bold;
+                    text-align: center;
+                  "
+                >
+                  Floating Icon AYO SRC Toko Home Page
+                </p>
                 <div class="px-24">
-                  <div ngfDrop selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files"
-                    accept="image/*" [class.invalid-drag]="validComboDrag===false" [class.valid-drag]="validComboDrag"
-                    (fileChange)="changeImage($event)">
-                    <div class="p-24" fxLayout="column" fxLayoutAlign="center center">
-                      <mat-icon style="width: 48px;height: 48px;font-size: 48px;">add_photo_alternate_outline</mat-icon>
-                      <br>
+                  <div
+                    ngfDrop
+                    selectable="1"
+                    class="rectangle-16"
+                    [(validDrag)]="validComboDrag"
+                    [(file)]="files"
+                    accept="image/*"
+                    [class.invalid-drag]="validComboDrag === false"
+                    [class.valid-drag]="validComboDrag"
+                    (fileChange)="changeImage($event)"
+                  >
+                    <div
+                      class="p-24"
+                      fxLayout="column"
+                      fxLayoutAlign="center center"
+                    >
+                      <mat-icon
+                        style="width: 48px; height: 48px; font-size: 48px"
+                        >add_photo_alternate_outline</mat-icon
+                      >
+                      <br />
                       <span matPrefix>Tarik Gambar Kesini</span>
                     </div>
                   </div>
                 </div>
-                <p style="font-weight: bold;text-align: center;">Preview</p>
-                <div style="text-align: center;" *ngIf="imageConverted">
-                  <img [src]="imageConverted" alt="Preview Image" width="200px" height="100px">
+                <p style="font-weight: bold; text-align: center">Preview</p>
+                <div style="text-align: center" *ngIf="imageConverted">
+                  <img
+                    [src]="imageConverted"
+                    alt="Preview Image"
+                    width="200px"
+                    height="100px"
+                  />
                 </div>
-                <p style="font-style: italic;font-weight: bold;text-align: center;">Floating Icon AYO SRC Toko Home Page</p>
+                <p
+                  style="
+                    font-style: italic;
+                    font-weight: bold;
+                    text-align: center;
+                  "
+                >
+                  Floating Icon AYO SRC Toko Home Page
+                </p>
               </div>
             </div>
             <div fxFlex="1"></div>
             <div fxFlex="20">
               <div fxLayout="row" class="px-24">
                 <mat-form-field fxFlex class="is-light form-primary">
-                  <input matInput type="text" placeholder="Header" [formControl]="preview_header"
-                    name="preview_header">
+                  <input
+                    matInput
+                    type="text"
+                    placeholder="Header"
+                    [formControl]="preview_header"
+                    name="preview_header"
+                  />
                 </mat-form-field>
               </div>
             </div>
