--- a/src/app/pages/dte/spin-the-wheel/index/spin-the-wheel.component.html
+++ b/src/app/pages/dte/spin-the-wheel/index/spin-the-wheel.component.html
@@ -64,7 +64,7 @@
               <button id="btn-detail" mat-icon-button *ngIf="!permission?.ubah" color="" (click)="directDetail(row)">
                 <mat-icon class="secondary-text">download</mat-icon>
               </button>
-              <button id="btn-edit" mat-icon-button *ngIf="permission?.ubah" color="" (click)="directEdit(row)">
+              <button id="btn-edit" mat-icon-button color="" (click)="directEdit(row)">
                 <mat-icon class="secondary-text">edit</mat-icon>
               </button>
               <button id="btn-delete" mat-icon-button color="primary" matTooltip="{{'global.button.delete' | translate}}"
