Improve Check Audience in Spin The Wheel Page. Ticket: CDE-4968-Spin-The-Wheel

--- a/src/app/pages/dte/spin-the-wheel/edit/spin-the-wheel-edit.component.html
+++ b/src/app/pages/dte/spin-the-wheel/edit/spin-the-wheel-edit.component.html
@@ -456,7 +456,7 @@
               fxFlex="20"
               [disabled]="!isChecked"
             >
-              Save
+              {{ ls.locale.global.button.save }}
             </button>
           </div>
         </mat-tab>
