Update Spin the wheel - Audience Tab Feature 99%. FT#CDE-4968-Spin-The-Wheel

--- a/src/app/pages/dte/spin-the-wheel/edit/spin-the-wheel-edit.component.html
+++ b/src/app/pages/dte/spin-the-wheel/edit/spin-the-wheel-edit.component.html
@@ -452,7 +452,7 @@
               mat-raised-button
               type="button"
               class="confirmation-button"
-              (click)="submit()"
+              (click)="saveAudience()"
               fxFlex="20"
               [disabled]="!isChecked"
             >
