--- a/src/app/pages/dte/spin-the-wheel/edit/spin-the-wheel-edit.component.html
+++ b/src/app/pages/dte/spin-the-wheel/edit/spin-the-wheel-edit.component.html
@@ -612,8 +612,8 @@
                 <p fxFlex="15">Limit Spin</p>
                 <div fxFlex="1"></div>
                 <mat-form-field fxFlex class="is-light form-primary" fxFlex="20">
-                  <input matInput type="number" placeholder="" formControlName="name"
-                    name="name">
+                  <input matInput type="number" placeholder="" formControlName="limit_spin"
+                    name="limit_spin" (change)="calculatePM($event)" (keyup)="calculatePM($event)">
                 </mat-form-field>
                 <div fxFlex="2"></div>
                 <p style="font-weight: bold;font-style: italic;">Average Coin per Spin = 35</p>
@@ -622,11 +622,11 @@
                 <p fxFlex="15">Jumlah Variasi Koin</p>
                 <div fxFlex="1"></div>
                 <mat-form-field fxFlex class="is-light form-primary" fxFlex="20">
-                  <input matInput type="number" placeholder="" formControlName="coin_variation"
+                  <input min="1" matInput type="number" placeholder="" formControlName="coin_variation"
                     name="name" (change)="changeCoinVariation($event)" (keyup)="changeCoinVariation($event)">
                 </mat-form-field>
               </div>
-              <div fxLayout="row" fxFlex="100" class="px-24">
+              <div fxLayout="row" fxFlex="100" class="px-24" *ngIf="formPM.get('coin_variation').value">
                 <table class="table" fxFlex="25">
                   <thead>
                     <tr>
@@ -642,27 +642,27 @@
                     </tr>
                   </thead>
                   <tbody>
-                    <tr *ngFor="let item of formPM.get('coins').value">
+                    <tr *ngFor="let item of formPM.get('coins').value; let i=index;">
                       <td>
                         <mat-form-field fxFlex class="is-light form-primary" fxFlex="25">
-                          <input matInput type="number" placeholder="">
+                          <input min="1" matInput type="number" placeholder="" value="{{item.coin}}" (change)="changeCoin($event, i)" (keyup)="changeCoin($event, i)">
                         </mat-form-field>
                       </td>
                       <td>
                         <mat-form-field fxFlex class="is-light form-primary" fxFlex="25">
-                          <input matInput type="number" placeholder="">
+                          <input min="1" matInput type="number" placeholder="" value="{{item.slice}}" (change)="changeSlice($event, i)" (keyup)="changeSlice($event, i)">
                         </mat-form-field>
                       </td>
                       <td>
                         <mat-form-field fxFlex class="is-light form-primary" fxFlex="25">
-                          <input matInput type="number" placeholder="">
+                          <input min="1" matInput type="number" placeholder="" value="{{item.probability}}" (change)="changeProbability($event, i)" (keyup)="changeProbability($event, i)">
                         </mat-form-field>
                       </td>
                       <td>
-                        <p style="font-style: italic;padding:15px;">{{coin}}</p>
+                        <p style="font-style: italic;padding:15px;">{{item.limit_atempt}}</p>
                       </td>
                       <td>
-                        <p style="font-style: italic;padding:15px;">80.000.000</p>
+                        <p style="font-style: italic;padding:15px;">{{item.total_budget}}</p>
                       </td>
                       <td>
                         <p style="font-style: italic;padding:15px;">20.000</p>
